Remove unnecessary configuration and tasks
Simplified the build by removing unnecessary tasks and configuration from the gradle and workflow files. In particular, irrelevant dependencies within 'build.gradle.kts' have been removed, as well as the redundant package phase from the GitHub 'test.yml' workflow. Some improvements have been made to the logging messages within the 'endToEndWebserver.kt' file to increase clarity.